// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button default button renders correctly 1`] = `
<button
  className="
        default
      "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span />
</button>
`;

exports[`The Button grey button renders correctly 1`] = `
<button
  className="
        grey
      "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span />
</button>
`;

exports[`The Button transparent button renders correctly 1`] = `
<button
  className="
        transparent
      "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span />
</button>
`;
